Update module